# gulati-quadrature

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  audibility_complete_combined.tex  optimal_quadrature_siam_20pp.tex  pyproject.toml
docs/: algorithm.md  arbitrary_surface_qjet.md  axisymmetric_3d_scale_phase_tetration.md  conic_pencil_surface_qjet.md  cross_slice_atlas.md  global_analytic_proof_repair.md  golden_hyperbolic_normalization.md  joukowski_static_endpoint_calculus.md  multivariate_resultant_generator.md  polyhedral_mellin_kondratiev.md  riemann_vs_cosecant_generalization.md  static_scale_phase_cauchy.md  transparent_tail_dtn.md
examples/: discriminant_curvature_complex_shape_demo.py  discriminant_curvature_shape_gallery.py  polynomial_shape_tangent_asymptote_demo.py  q_autograd_meshless_shape_optimization.py  q_complex_fourier_spectrum_benchmark.py  q_spectrum_shape_gallery.py
notebooks/: production_3d_qjet_method.ipynb  q_machine_precision_pipeline.ipynb
scripts/: arbitrary_surface_benchmark.py  axisymmetric_3d_qjet_benchmark.py  axisymmetric_scale_phase_benchmark.py  beta_counterterm_certificate.py  build_machine_precision_pipeline_report.py  build_production_3d_qjet_html.py  build_production_3d_qjet_notebook.py  build_q_machine_precision_notebook.py  build_siam_q_research_paper.py  cad_qjet_invertibility_campaign.py  clean_reference_benchmark_suites.py  conic_pencil_surface_benchmark.py  cross_slice_atlas_benchmark.py  cycle_trace_falsification.py  discriminant_three_jet_benchmark.py  final_q_machine_precision_pipeline.py  final_q_vs_fem_funky_head_to_head.py  gauss_circle_arithmetic_checksum.py  golden_hyperbolic_benchmark.py  hardy_voronoi_flux_certificate.py  joukowski_static_endpoint_benchmark.py  multivariate_resultant_benchmark.py  polyhedral_corner_convergence.py  pressure_test_gulati_quadrature.py  pressure_test_offcircle_gulati.py  pressure_test_qbx_comparison.py  production_3d_cad_pde_validation.py  production_3d_pde_validation.py  production_3d_qjet_extended_validation.py  production_3d_repaired_refinement.py  production_3d_shape_campaign.py  production_nasa_cad_pde_visualization.py  pullback_generalization_duel.py  q_dtn_arbitrary_planar_benchmark.py  q_dtn_funky_fem_head_to_head.py  q_dtn_helmholtz_ground_truth.py  q_dtn_manufactured_ground_truth.py  q_dtn_vs_fem_benchmark.py  q_engine_ui_backend.py  qbx_gulati_cusp_benchmark.py  (+12 more)
tests/: test_arbitrary_surface.py  test_arbitrary_surface_benchmark.py  test_axisymmetric3d.py  test_axisymmetric_scale_phase.py  test_cad_qjet_invertibility_report.py  test_cad_surface_pde_pipeline.py  test_complex_reconstruction.py  test_conic_pencil_surface.py  test_cross_slice_atlas.py  test_dirichlet.py  test_discriminant_three_jet.py  test_geometry.py  test_golden_hyperbolic.py  test_golden_hyperbolic_atlas.py  test_joukowski_endpoint.py  test_multivariate_resultant.py  test_offcircle_gulati.py  test_operators.py  test_polyhedral_corner_convergence.py  test_polyhedral_kondratiev.py  test_production_3d_pde_validation.py  test_production_3d_qjet_html.py  test_production_3d_qjet_notebook.py  test_production_3d_repaired_refinement.py  test_q_dtn.py  (+18 more)
(+311 files in other folders)
