[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gulati-quadrature"
version = "0.2.0"
description = "Matrix-free planar and three-dimensional QJet quadrature operators."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Rick Gulati" }
]
keywords = [
  "boundary integral quadrature",
  "Dirichlet-to-Neumann",
  "near singular quadrature",
  "surface quadrature",
  "QJet",
  "Gulati Laplacian"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "mpmath>=1.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
reports = [
  "beautifulsoup4>=4.12",
  "nbconvert>=7.16",
  "nbformat>=5.10",
  "pillow>=10.0",
]
dev = [
  "beautifulsoup4>=4.12",
  "nbconvert>=7.16",
  "nbformat>=5.10",
  "pillow>=10.0",
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
gulati-q = "gulati_quadrature.cli:main"
inverse-shape = "inverse_shape.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict = false
